--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+dist
+cabal-dev
 *.o
 *.hi
+*.chi
+*.chs.h
+.virthualenv
 CloudHaskellTalk
+PingPongUntyped
+PingPongTyped
+PingPongTypedBad
+PingPongUntypedBad
+PingPongUntypedBadNoCrash
+PingPongUntypedBadNoCrashReceiveWait
+PingPongUntypedBadSupervised
+PingPongUntypedSimple
